refactor: make kafka consumer compatible with Java 8